프로토타입 추가

--- a/src/components/icon.html
+++ b/src/components/icon.html
@@ -53,11 +53,11 @@
                     <div class="box a">
                         <ul>
 							<li>
-                                <span class="icon"><i class="ico back md"></i></span>
+                                <span class="icon"><i class="ico back lg"></i></span>
                                 <span class="text">back</span>
                             </li>
 							<li>
-                                <span class="icon"><i class="ico home md"></i></span>
+                                <span class="icon"><i class="ico home lg"></i></span>
                                 <span class="text">home</span>
                             </li>
                             <li>
