--- a/src/include/header.html
+++ b/src/include/header.html
@@ -32,7 +32,7 @@
 		</div>
 	</div>
 
-	<script>
+	<!-- <script>
 		window.scrollPosition = document.documentElement.scrollTop || 0;
 		let documentY, direction, headHeight;
 		
@@ -67,5 +67,5 @@
 
 			window.scrollPosition = documentY;
 		}
-	</script>
+	</script> -->
 </header>
