--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -87,6 +87,8 @@
 			transform:translateY(100%);
 			transition:transform .5s;
 		}
+
+		// @include popupType();
 	}
 	// type Drag Bottom Sheet
 	&.type-drag {
