--- a/src/include/header.html
+++ b/src/include/header.html
@@ -14,7 +14,7 @@
 			}
 			
 			@@if (type === "sub_01"){
-				<!-- 뒤로가기 버튼 |  타이틀  | 세팅 버튼 -->
+			<!-- 뒤로가기 버튼 |  타이틀  | 세팅 버튼 -->
 			<div class="head">
 				<div class="left">
 					<button type="button" class="btn-head">
@@ -27,6 +27,17 @@
 						<i class="ico home md"></i>
 					</button>
 				</div>
+			</div>
+			}
+
+			@@if (type === "sub_pop"){
+			<div class="head">
+				<div class="left">
+					<button type="button" class="btn-head">close icon
+						<i class="ico close md"></i>
+					</button>
+				</div>
+				<h2 class="title">Title</h2>
 			</div>
 			}
 		</div>
