--- a/src/components/middle_popup_test.html
+++ b/src/components/middle_popup_test.html
@@ -27,12 +27,12 @@
 			const page = location.href;
 			const pageName = page.split('#');
 			const dom = document.querySelector('.layer-container');
-			const url = '/html/popup/'+pageName[1] +'.html';
-			console.log(url)
+			const url = '/html/popup/'+pageName[2] +'.html';
+			console.log(pageName[1])
 
 			fetch(url).then(response => response.text()).then(data =>{
 				dom.innerHTML = data;
-				console.log(data);
+				// console.log(data);
 
 				document.querySelector('.layer-popup-wrap').classList.add('active');
 			});
