--- a/src/components/popup_module.html
+++ b/src/components/popup_module.html
@@ -11,7 +11,14 @@
 		<section id="container">
 			<div class="contents">
 
-				<div class="layer-popup-wrap" id="tmpLayer01">
+				<!-- 
+					기본 팝업    : 미들 팝업
+					바텀 레이어  : type-bottom 
+					풀 팝업      : type-full
+
+					ex) layer-popup-wrap type-bottom 멀티 클레스
+				 -->
+				<div class="layer-popup-wrap">
 					<div class="layer-container">
 						
 					</div>
