회원 퍼블리싱

--- a/src/components/icon.html
+++ b/src/components/icon.html
@@ -53,6 +53,14 @@
                     <div class="box a">
                         <ul>
 							<li>
+                                <span class="icon"><i class="ico delete md"></i></span>
+                                <span class="text">delete</span>
+                            </li>
+							<li>
+                                <span class="icon"><i class="ico close md"></i></span>
+                                <span class="text">close</span>
+                            </li>
+							<li>
                                 <span class="icon"><i class="ico back lg"></i></span>
                                 <span class="text">back</span>
                             </li>
