--- a/src/components/input.html
+++ b/src/components/input.html
@@ -42,7 +42,7 @@
 						<br>
 
 						<div class="ip-group">
-							<input type="text" class="ip-txt" required placeholder="이름">
+							<input type="text" class="ip-txt" placeholder="이름">
 							<!-- <input required type="password" class="ip-txt" name="password" placeholder="비밀번호" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}"> -->
 							<div class="line"></div>
 						</div>
