--- a/src/include/header.html
+++ b/src/include/header.html
@@ -33,11 +33,10 @@
 			@@if (type === "sub_pop"){
 			<div class="head">
 				<div class="left">
-					<button type="button" class="btn-head">close icon
+					<button type="button" class="btn-head">
 						<i class="ico close md"></i>
 					</button>
 				</div>
-				<h2 class="title">Title</h2>
 			</div>
 			}
 		</div>
