--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -15,7 +15,7 @@ $btn-danger:         #dc3545 !default;
 
 // button color type
 $btn-colors: (
-    "primary":   $btn-primary,
+    "primary":   $gray-dark,
     "secondary": $btn-secondary,
     "success":   $btn-success,
     "info":      $btn-info,
