--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -18,8 +18,12 @@ $font-xl2: 24px !default;
 $font-xl3: 28px !default;
 $font-xl4: 32px !default;
 
+// color
+$gray-light: #CFD4D7;
+$gray-dark: #40535E;
+
 // border-radius
-$border-radius: 10px;
+$border-radius: 8px;
 
 
 
