input  컴포넌트 추가 하단 버튼 타입 수정

--- a/src/components/swiper.html
+++ b/src/components/swiper.html
@@ -107,7 +107,7 @@
 				</script>
 
 			</div>
-			@@include('@@webRoot/include/bot_fix.html')
+			@@include('@@webRoot/include/bot_fix.html', {type: "type01"})
 		</section>
 		<!-- //container -->
 
