--- a/src/components/input.html
+++ b/src/components/input.html
@@ -4,8 +4,12 @@
         @@include('@@webRoot/include/head.html')
         <style>
             .contents {
-                padding: 20px 40px 20px !important;
+				padding: 20px 40px 20px !important;
             }
+			.module{
+				display:flex;
+				flex-wrap: wrap;
+			}
             .contents .tmp-guide-box {
                 margin-left: 0;
                 margin-right: 0;
@@ -14,6 +18,15 @@
                 margin-bottom: 20px;
                 font-size: 30px;
             }
+
+			.tmp-guide-box{
+				flex:1;
+				width:360px;
+				flex-basis: 360px;
+				max-width: 360px;
+				margin-right:40px !important;
+				box-sizing: border-box;
+			}
         </style>
     </head>
     <body>
@@ -21,74 +34,101 @@
             <!-- container -->
             <section id="container">
                 <div class="contents">
-                    <h2>INPUT</h2>
 
-                    <!-- Input -->
-                    <div class="tmp-guide-box">
-                        <h2 class="guide-box-tit">Input</h2>
 
-						<div class="ip-group box">
-							<input type="text" class="ip-txt" placeholder="이름">
-							<div class="line"></div>
+                    <h2>INPUT</h2><br>
+
+					<div class="module">
+
+						<!-- Input -->
+						<div class="tmp-guide-box">
+							<h2 class="guide-box-tit">Input</h2>
+	
+							<div class="ip-group box">
+								<input type="text" class="ip-txt" placeholder="이름">
+								<div class="line"></div>
+							</div>
+	
+							<br>
+	
+							<div class="ip-group box error">
+								<input type="text" class="ip-txt" placeholder="이름">
+								<div class="line"></div>
+							</div>
+	
+							<br>
+	
+							<div class="ip-group">
+								<input type="text" class="ip-txt" placeholder="이름">
+								<!-- <input required type="password" class="ip-txt" name="password" placeholder="비밀번호" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}"> -->
+								<div class="line"></div>
+							</div>
+	
+							<br />
+							
+							<div class="ip-group error">
+								<input type="text" class="ip-txt" required placeholder="이름">
+								<div class="line"></div>
+							</div>
+	
+							<br>
+	
+							<div class="ip-group">
+								<label for="ip01" class="ip-label">추천인 아이디</label>
+								<input id="ip01" type="text" class="ip-txt" placeholder="추천인 아이디 입력">
+								<button type="button" class="btn-del">
+									<i class="ico delete md"></i>
+								</button>
+								<div class="line"></div>
+							</div>
+	
+							<br />
+							<input type="text" value="홍길동" />
+							<br /><br />
+							<input type="text" value="disabled" disabled />
 						</div>
-
-						<br>
-
-						<div class="ip-group box error">
-							<input type="text" class="ip-txt" placeholder="이름">
-							<div class="line"></div>
+						<!-- //Input -->
+	
+						<!-- Password -->
+						<div class="tmp-guide-box">
+							<h2 class="guide-box-tit">Password</h2>
+							<div class="ip-group box">
+								<input type="password" id="fakePassword" class="ip-txt" placeholder="Enter Password">
+								<div class="line"></div>
+								<i id="toggler" class="ico eye-on md"></i>
+								<span></span>
+							</div>
+							<div class="password-field">
+							</div>
 						</div>
+	
+						<!-- Password -->
 
-						<br>
-
-						<div class="ip-group">
-							<input type="text" class="ip-txt" placeholder="이름">
-							<!-- <input required type="password" class="ip-txt" name="password" placeholder="비밀번호" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}"> -->
-							<div class="line"></div>
+						<!-- Select -->
+						<div class="tmp-guide-box">
+							<h2 class="guide-box-tit">Select</h2>
+							<select name="" id="">
+								<option value="옵션1">옵션1</option>
+								<option value="옵션2">옵션2</option>
+								<option value="옵션3">옵션3</option>
+							</select>
 						</div>
-
-                        <br />
-						
-						<div class="ip-group error">
-							<input type="text" class="ip-txt" required placeholder="이름">
-							<div class="line"></div>
+						<!-- Select -->
+	
+						<!-- input file -->
+						<div class="tmp-guide-box">
+							<!-- 
+								이미지 다중 선택 : multiple
+								aos : accept 갤러리 바로 접근
+							-->
+							<input type="file" multiple accept=image/*>
 						</div>
+	
+					</div>
+				</section>
+			</div>
+		</div>
 
-						<br />
-                        <input type="text" value="홍길동" />
-                        <br /><br />
-                        <input type="text" value="disabled" disabled />
-                    </div>
-                    <!-- //Input -->
-
-                    <!-- Password -->
-                    <div class="tmp-guide-box">
-                        <h2 class="guide-box-tit">Password</h2>
-						<div class="ip-group box">
-							<input type="password" id="fakePassword" class="ip-txt" placeholder="Enter Password">
-							<div class="line"></div>
-							<i id="toggler" class="ico eye-on md"></i>
-							<span></span>
-						</div>
-                        <div class="password-field">
-                        </div>
-                    </div>
-
-                    <!-- Password -->
-
-                    <!-- Select -->
-                    <div class="tmp-guide-box">
-                        <h2 class="guide-box-tit">Select</h2>
-                        <select name="" id="">
-                            <option value="옵션1">옵션1</option>
-                            <option value="옵션2">옵션2</option>
-                            <option value="옵션3">옵션3</option>
-                        </select>
-                    </div>
-                    <!-- Select -->
-                </div>
-            </section>
-        </div>
 
         <script type="text/javascript">
 			// 비밀번호 입력필드
