--- a/src/components/layout01.html
+++ b/src/components/layout01.html
@@ -14,7 +14,7 @@
 			<div class="contents" style="height:3000px">
 				<div>sgsdgsd</div>
 			</div>
-			@@include('@@webRoot/include/bot_fix.html')
+			@@include('@@webRoot/include/bot_fix.html', {type: "type01"})
 		</section>
 		<!-- //container -->
 
