--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -38,21 +38,25 @@
 		.layer-header {
 			max-height:66px;
 			padding:20px;
-			border-bottom:1px solid #000;
+			// border-bottom:1px solid #000;
 			font-size:18px;
 			font-weight:bold;
+			.layer-close {
+				position:absolute;
+				right:0;
+				top:0;
+				width:66px;
+				height:66px;
+			}
 		}
-		.layer-contents {
+		.layer-body {
+			padding:0px 20px;
 			overflow-y:auto;
-			padding:20px;
 		}
-		.layer-close {
-			position:absolute;
-			right:0;
-			top:0;
-			width:66px;
-			height:66px;
+		.layer-footer{
+			padding: 20px;
 		}
+		
 	}
 	&.active {
 		height:100%;
@@ -116,7 +120,19 @@
 	&.type-full {
 		padding:0;
 		.layer-container {
+			display: flex;
+			flex-direction: column;
 			height:100%;
+			.layer-header{
+				flex: 0 0 auto;
+			}
+			.layer-body{
+				flex: 1;
+			}
+			.layer-footer{
+				flex: 0 0 auto;
+				margin-top: auto;
+			}
 		}
 	}
 }
