--- a/src/components/input.html
+++ b/src/components/input.html
@@ -36,74 +36,93 @@
                 <div class="contents">
 
 
-                    <h2>INPUT</h2><br>
+                    <h2>INPUT BOX</h2><br>
 
 					<div class="module">
 
-						<!-- Input -->
+						<!-- Password -->
 						<div class="tmp-guide-box">
-							<h2 class="guide-box-tit">Input</h2>
-	
-							<div class="ip-group box">
-								<input type="text" class="ip-txt" placeholder="이름">
-								<div class="line"></div>
-							</div>
-	
-							<br>
-	
-							<div class="ip-group box error">
-								<input type="text" class="ip-txt" placeholder="이름">
-								<div class="line"></div>
-							</div>
-	
-							<br>
-	
+							<h2 class="guide-box-tit">Input Line</h2>
+
 							<div class="ip-group">
-								<input type="text" class="ip-txt" placeholder="이름">
-								<!-- <input required type="password" class="ip-txt" name="password" placeholder="비밀번호" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}"> -->
-								<div class="line"></div>
+								<div class="row">
+									<input type="text" class="ip-txt" placeholder="이름">
+									<!-- <input required type="password" class="ip-txt" name="password" placeholder="비밀번호" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}"> -->
+									<div class="line"></div>
+								</div>
 							</div>
 	
 							<br />
 							
-							<div class="ip-group error">
-								<input type="text" class="ip-txt" required placeholder="이름">
-								<div class="line"></div>
+							<div class="ip-group">
+								<div class="row error">
+									<input type="text" class="ip-txt" required placeholder="이름">
+									<div class="line"></div>
+								</div>
+								<p class="error-txt">비밀번호가 일치하지 않습니다</p>
 							</div>
 	
 							<br>
 	
 							<div class="ip-group">
-								<label for="ip01" class="ip-label">추천인 아이디</label>
-								<input id="ip01" type="text" class="ip-txt" placeholder="추천인 아이디 입력">
-								<button type="button" class="btn-del">
-									<i class="ico delete md"></i>
-								</button>
-								<div class="line"></div>
+								<div class="row">
+									<label for="ip01" class="ip-label">추천인 아이디</label>
+									<input id="ip01" type="text" class="ip-txt" placeholder="추천인 아이디 입력">
+									<button type="button" class="icon-group btn-del">
+										<i class="ico delete md"></i>
+									</button>
+									<div class="line"></div>
+								</div>
 							</div>
-	
-							<br />
-							<input type="text" value="홍길동" />
-							<br /><br />
-							<input type="text" value="disabled" disabled />
-						</div>
-						<!-- //Input -->
-	
-						<!-- Password -->
-						<div class="tmp-guide-box">
-							<h2 class="guide-box-tit">Password</h2>
-							<div class="ip-group box">
-								<input type="password" id="fakePassword" class="ip-txt" placeholder="Enter Password">
-								<div class="line"></div>
-								<i id="toggler" class="ico eye-on md"></i>
-								<span></span>
-							</div>
-							<div class="password-field">
+
+							<br>
+
+							<div class="ip-group">
+								<div class="row">
+									<label for="fakePassword" class="ip-label">비밀번호</label>
+									<input type="password" id="fakePassword" class="ip-txt" placeholder="비밀번호 확인">
+									<div class="line"></div>
+									<span class="icon-group">
+										<button type="button" class="ip-icon">
+											<i class="ico delete md"></i>
+										</button>
+										<button id="toggler" type="button" class="ip-icon">
+											<i class="ico eye-on md"></i>
+										</button>
+									</span>
+								</div>
 							</div>
 						</div>
 	
 						<!-- Password -->
 
+						<!-- Input -->
+						<div class="tmp-guide-box">
+							<h2 class="guide-box-tit">Input Box</h2>
+	
+							<div class="ip-group box">
+								<div class="row">
+									<input type="text" class="ip-txt" placeholder="이름">
+									<div class="line"></div>
+								</div>
+							</div>
+	
+							<br>
+	
+							<div class="ip-group box">
+								<div class="row error">
+									<input type="text" class="ip-txt" placeholder="이름">
+									<div class="line"></div>
+								</div>
+								<p class="error-txt">이름이 일치하지 않습니다</p>
+							</div>
+	
+							<br>
+							
+							<input type="text" value="disabled" disabled />
+						</div>
+						<!-- //Input -->
+	
 						<!-- Select -->
 						<div class="tmp-guide-box">
 							<h2 class="guide-box-tit">Select</h2>
