--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -4,7 +4,7 @@ $btn-color-default:  #fff !default;
 $btn-color-disabled: #333 !default;
 $btn-border-default: #000 !default;
 $btn-bg-default:     #000 !default;
-$btn-bg-disabled:    #999 !default;
+$btn-bg-disabled:    #CFD4D7 !default;
 
 $btn-primary:        #0d6efd !default;
 $btn-secondary:      #198754 !default;
@@ -34,11 +34,11 @@ $btn-size: (
         "font-size" : 14px
     ),
     "lg" : (
-        "size" : 40px,
+        "size" : 48px,
         "font-size" : 16px
     ),
     "xl" : (
-        "size" : 48px,
+        "size" : 74px,
         "font-size" : 16px
     )
 ) !default;
