--- a/src/components/input.html
+++ b/src/components/input.html
@@ -44,6 +44,39 @@
 						<div class="tmp-guide-box">
 							<h2 class="guide-box-tit">Input Line</h2>
 
+							<div class="ip-wrap">
+								<div class="ip-group">
+									<div class="row">
+										<label for="ip01" class="ip-label">추천인 아이디</label>
+										<input id="ip01" type="text" class="ip-txt" placeholder="추천인 아이디 입력">
+										<button type="button" class="icon-group btn-del">
+											<i class="ico delete md"></i>
+										</button>
+										<div class="line"></div>
+									</div>
+									<p class="error-txt">비밀번호가 일치하지 않습니다</p>
+								</div>
+
+								<div class="ip-group">
+									<div class="row error">
+										<label for="fakePassword" class="ip-label">비밀번호</label>
+										<input type="password" id="fakePassword" class="ip-txt" placeholder="비밀번호 확인">
+										<div class="line"></div>
+										<span class="icon-group">
+											<button type="button" class="ip-icon">
+												<i class="ico delete md"></i>
+											</button>
+											<button id="toggler" type="button" class="ip-icon">
+												<i class="ico eye-on md"></i>
+											</button>
+										</span>
+									</div>
+									<p class="error-txt">비밀번호가 일치하지 않습니다</p>
+								</div>
+							</div>
+
+							<br>
+
 							<div class="ip-group">
 								<div class="row">
 									<input type="text" class="ip-txt" placeholder="이름">
@@ -61,37 +94,7 @@
 								</div>
 								<p class="error-txt">비밀번호가 일치하지 않습니다</p>
 							</div>
-	
-							<br>
-	
-							<div class="ip-group">
-								<div class="row">
-									<label for="ip01" class="ip-label">추천인 아이디</label>
-									<input id="ip01" type="text" class="ip-txt" placeholder="추천인 아이디 입력">
-									<button type="button" class="icon-group btn-del">
-										<i class="ico delete md"></i>
-									</button>
-									<div class="line"></div>
-								</div>
-							</div>
 
-							<br>
-
-							<div class="ip-group">
-								<div class="row">
-									<label for="fakePassword" class="ip-label">비밀번호</label>
-									<input type="password" id="fakePassword" class="ip-txt" placeholder="비밀번호 확인">
-									<div class="line"></div>
-									<span class="icon-group">
-										<button type="button" class="ip-icon">
-											<i class="ico delete md"></i>
-										</button>
-										<button id="toggler" type="button" class="ip-icon">
-											<i class="ico eye-on md"></i>
-										</button>
-									</span>
-								</div>
-							</div>
 						</div>
 	
 						<!-- Password -->
