--- a/src/components/input.html
+++ b/src/components/input.html
@@ -103,21 +103,21 @@
 						<div class="tmp-guide-box">
 							<h2 class="guide-box-tit">Input Box</h2>
 	
-							<div class="ip-group box">
-								<div class="row">
-									<input type="text" class="ip-txt" placeholder="이름">
-									<div class="line"></div>
+							<div class="ip-wrap">
+								<div class="ip-group box">
+									<div class="row">
+										<input type="text" class="ip-txt" placeholder="이름">
+										<div class="line"></div>
+									</div>
 								</div>
-							</div>
-	
-							<br>
-	
-							<div class="ip-group box">
-								<div class="row error">
-									<input type="text" class="ip-txt" placeholder="이름">
-									<div class="line"></div>
+		
+								<div class="ip-group box">
+									<div class="row error">
+										<input type="text" class="ip-txt" placeholder="이름">
+										<div class="line"></div>
+									</div>
+									<p class="error-txt">이름이 일치하지 않습니다</p>
 								</div>
-								<p class="error-txt">이름이 일치하지 않습니다</p>
 							</div>
 	
 							<br>
