페이지 폴더 및 scss 파일 매칭

--- a/src/scss/contents.scss
+++ b/src/scss/contents.scss
@@ -2,7 +2,6 @@
 
 @import "variables";
 @import "mixin";
-@import "base";
 @import "common";
 @import "text";
 @import "button";
@@ -17,8 +16,11 @@
 @import "icon";
 // @import "bundle";
 // 카테고리 scss
+@import "member";			// 회원계정
+@import "reservation";		// 차량예약
+@import "history";			// 이용내역
+@import "mypage";			// 내정보
 @import "notice";
-@import "mypage";
 
 /* layout */
 html {
@@ -442,66 +444,4 @@ html {
 		background-position: 1200px 0;
 	}
 }
-}
-
-/* 회원계정 */
-.member{
-	.desc-xl{
-		font-weight:700;
-	}
-
-	.ip-group{
-		margin-top:30px;
-		
-		label{
-			margin-bottom:5px;
-		}
-	}
-
-	.id-group{
-		margin-top:27px;
-		.desc{
-			color:#6E7375;
-			font-weight:400;
-		}
-		.item{
-			margin-top:12px;
-			border:1px solid #D9D9D9;
-			border-radius: $border-radius;
-
-			&:first-child{
-				margin-top:7px;
-			}
-
-			a{
-				display:block;
-				height:48px;
-				padding:0 18px;
-				line-height:44px;
-				font-size: $font-md;
-				box-sizing: border-box;
-
-				.lpoint{
-					display:inline-block;
-					margin-left:5px;
-					font-size: 16px;
-					font-weight:700;
-					color:#009BFA
-				}
-			}
-		}
-	}
-
-	/* 약관동의 */
-	.corporation{
-		color: $black;
-		font-size: $font-sm;
-		text-align:right;
-
-		span{
-			display:inline-block;
-			margin-right:4px;
-			color: $gray;
-		}
-	}	
 }
