--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,7 +3,7 @@
 // url
 $url-path:   "../images/" !default;
 $url-common: ""+$url-path+"common/" !default;
-$url-content: $url-path+"/contents/" !default;
+$url-content: $url-path+"contents/" !default;
 $url-ico:    $url-path + "icon/" !default;
 
 // font-size
