--- a/src/scss/_member.scss
+++ b/src/scss/_member.scss
@@ -39,10 +39,12 @@
 
 				.lpoint{
 					display:inline-block;
-					margin-left:5px;
-					font-size: 16px;
-					font-weight:700;
-					color:#009BFA
+					width:59px;
+					height:11px;
+					margin-left:7px;
+					vertical-align:-1px;
+					background: url(#{$url-content}lpoint_logo.svg) no-repeat;
+					background-size:100% 100%;
 				}
 			}
 		}
