--- a/src/components/popup_module.html
+++ b/src/components/popup_module.html
@@ -35,8 +35,9 @@
 			const pageName = page.split('#');
 			const domWrap = document.querySelector('.layer-popup-wrap');
 			const dom = document.querySelector('.layer-container');
-			const url = '/html/popup/'+pageName[1] +'.html';
-			pageName[2] && domWrap.classList.add('type-' + pageName[2]);
+			const url = '/html/'+pageName[1]+'/'+pageName[2] +'.html';
+			pageName[2] && domWrap.classList.add('type-' + pageName[3]);
+			console.log(pageName);
 			fetch(url).then(response => response.text()).then(data =>{
 				dom.innerHTML = data;
 				// console.log(data);
