--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -52,9 +52,9 @@
             overflow-y: auto;
             padding: 0 20px;
         }
-		.layer-footer{
-			padding: 20px;
-		}
+        .layer-footer {
+            padding: 20px;
+        }
     }
     &.active {
         height: 100%;
@@ -128,9 +128,29 @@
                 flex: 1;
             }
             .layer-footer {
-				flex: 0 0 auto;
+                flex: 0 0 auto;
                 margin-top: auto;
             }
         }
+    }
+}
+
+.layer-body {
+    .box {
+        border: 1px solid #ccc;
+        background-color: #f2f2f2;
+        border-radius: 8px;
+        padding: 20px;
+        margin-top: 20px;
+        .desc-list{
+			li + li{
+				margin-top: 8px;
+			}
+			.name{
+				display: inline-block;
+				width: 80px;
+				font-weight: bold;
+			}
+		}
     }
 }
