--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -277,7 +277,7 @@ $mobile-size : 360;
 
 	&.type-bottom{
 		.layer-container{
-			padding-bottom:74px;
+			// padding-bottom:74px;
 		}
 		.bot-btn-fix{
 			position:absolute;
