--- a/src/scss/_reservation.scss
+++ b/src/scss/_reservation.scss
@@ -1,3 +1,24 @@
 @charset "UTF-8";
 
 @import "_libs/_reservation01";
+
+
+.layer-body {
+    .box {
+        border: 1px solid #ccc;
+        background-color: #f2f2f2;
+        border-radius: 8px;
+        padding: 20px;
+        margin-top: 20px;
+        .desc-list{
+			li + li{
+				margin-top: 8px;
+			}
+			.name{
+				display: inline-block;
+				width: 80px;
+				font-weight: bold;
+			}
+		}
+    }
+}
