color style guide update

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -19,12 +19,60 @@ $font-xl3: 28px !default;
 $font-xl4: 32px !default;
 
 // color
+$red-060			: #d32828;
+$yellow-060			: #fed500;
+$pink-040			: #fd8484;
+$orange-050			: #fd9f4d;
+$puple-040			: #a87df9;
+
+$fuchsia-050		: #f8679c;
+$fuchsia-090		: #d22061;
+
+$blue-040			: #467bce;
+$blue-050			: #009bfa;
+$light-blue-040		: #5b68fe;
+
+$gray-000			: #fff;
+$gray-005			: #f8f8f8;
+$gray-010			: #f1f1f1;
+$gray-020			: #e2e2e2;
+$gray-030			: #d4d4d4;
+$gray-040			: #c5c5c5;
+$gray-050			: #b7b7b7;
+$gray-060			: #898989;
+$gray-070			: #5c5c5c;
+$gray-080			: #2e2e2e;
+$gray-090			: #121212;
+
+$green-010			: #e9f7ef;
+$green-020			: #d2eddd;
+$green-030			: #a6dbbb;
+$green-040			: #79c99a;
+$green-050			: #4db778;
+$green-060			: #20a556;
+$green-070			: #187c41;
+$green-080			: #10532b;
+$green-090			: #082916;
+$green-100			: #031109;
+
+$navy-010			: #eceeef;
+$navy-020			: #d9dddf;
+$navy-030			: #b3babf;
+$navy-040			: #8c989e;
+$navy-050			: #66757e;
+$navy-060			: #40535e;
+$navy-070			: #303e47;
+$navy-080			: #202a2f;
+$navy-090			: #101518;
+$navy-100			: #060809;
+
 $black         : #000;
 $black-100     : #333;
 
 $gray-light    : #CFD4D7;
 $gray-dark     : #40535E;
 $gray          : #636363;
+
 
 // border-radius
 $border-radius       : 8px;
